[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-impute"
version = "0.0.1"
authors = [
  { name="Joshua Weiner", email="joshuaweinernyc@gmail.com" },
]
description = "A package for single and multiple imputation via Iterative Factorial Analysis for Mixed Datatypes"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JoshWeiner/ml-impute"
"Bug Tracker" = "https://github.com/JoshWeiner/ml-impute/issues"
